# telegram-support-bot

./: .gitignore  README.md  docker-compose.yml  index.html
backend/: README.md  docker-compose.yml  main.py  pyproject.toml
backend/.envs/: .env.example
backend/src/: __init__.py  main.py
backend/src/api/: attachments.py  chats.py
backend/src/core/: config.py  factories.py
backend/src/db/: base.py  session.py
backend/src/db/models/: attachment.py  base.py  chat.py  message.py  message_attachment.py
backend/src/repositories/: attachment.py  base.py  chat.py  message.py  message_attachment.py
backend/src/schemas/: attachment.py  chat.py  message.py  message_attachment.py
backend/src/services/: attachment.py  chat.py  connection.py  message.py
backend/src/shared/: exceptions.py
backend/src/shared/utils/: handlers.py  image.py  routers.py
bot/: README.md  main.py  messages.yml  pyproject.toml
bot/.envs/: .env.example
bot/src/: __init__.py
bot/src/core/: config.py
bot/src/handlers/: __init__.py  messages.py  start.py
bot/src/services/: backend.py
bot/src/shared/: exceptions.py  text.py
frontend/: README.md  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatApp.jsx  ChatList.jsx  ChatWindow.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/styles/: App.css
