[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kanewi11"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
aiogram = "^3.16.0"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.4"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
fastapi = "^0.115.6"
websockets = "^14.1"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
