[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["kanewi11"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
httpx = "^0.28.1"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
